# lingo-db

./: .gitmodules  28.mlir  CMakeLists.txt  Makefile  Readme.md  lintlog.txt  requirements.txt
.github/workflows/: clang-tidy.yml  enforce-clang-format.yml  workflow-macos-15-aarch64.yml  workflow-ubuntu-latest-x86_64.yml  workflow.yml
include/: CMakeLists.txt
include/execution/: Execution.h  Timing.h
include/lingodb/catalog/: CUDF.h  Catalog.h  FunctionCatalogEntry.h  MLIRTypes.h  Types.h  UDFImplementer.h
include/lingodb/compiler/Dialect/RelAlg/: DatasourceProperty.h
include/lingodb/compiler/frontend/: UDFImplementer.h  column_semantic.h  driver.h  frontend_error.h  frontend_type.h  sql_analyzer.h  sql_context.h  sql_mlir_translator.h  sql_scope.h
include/lingodb/compiler/plpgsql-frontend/: pl_driver.h
include/lingodb/execution/: Error.h  Execution.h  Frontend.h  Timing.h
include/lingodb/runtime/: Catalog.h  DataSourceIteration.h  ExecutionContext.h  ExternalDataSourceProperty.h  LazyJoinHashtable.h  PythonRuntime.h  PythonUDFRuntime.h  SIP.h  Session.h  UDFRuntime.h  WASM.h
include/lingodb/runtime/storage/: TableStorage.h
include/lingodb/scheduler/: Tasks.h
include/lingodb/server/: Statement.h  StatementHandler.h
include/lingodb/server/ipc/: IPCHelper.h
include/lingodb/server/parser/: ParaParser.h
include/lingodb/utility/: PythonUtility.h  Serialization.h
include/runtime/: Catalog.h  ExecutionContext.h
include/server/: Statement.h  StatementExecution.h  StatementHandler.h
include/server/ipc/: IPCHelper.h
include/server/pararef-finder/: ParaParser.h
include/server/parser/: ParaParser.h
include/server/shm/: SyncHelper.h
lib/server/: CMakeLists.txt  Statement.cpp  StatementHandler.cpp
lib/server/ipc/: CMakeLists.txt  IPCHelper.cpp
lib/server/pararef-finder/: CMakeLists.txt  ParaParser.cpp
lib/server/parser/: ParaParser.cpp
lib/server/shm/: CMakeLists.txt  SyncHelper.cpp
resources/sql/simple/: already_running_tpcds.sql  already_running_tpch.sql  simple_select_group.sql  simple_select_joins.sql  test2.sql  testmlir.sql
resources/sql/uni/: 1.sql
src/catalog/: CMakeLists.txt  CUDF.cpp  Catalog.cpp  FunctionCatalogEntry.cpp  MLIRTypes.cpp  Types.cpp  UDFImplementer.cpp
src/compiler/Conversion/RelAlgToSubOp/: RelAlgToSubOp.cpp
src/compiler/Conversion/SubOpToControlFlow/: SubOpToControlFlow.cpp
src/compiler/Dialect/RelAlg/: RelAlgOps.cpp
src/compiler/Dialect/SubOperator/: SubOperatorOps.cpp
src/compiler/Dialect/util/: FunctionHelper.cpp
src/compiler/frontend/: CMakeLists.txt  UDFImplementer.cpp  driver.cpp  frontend_error.cpp  lexer.l  parser.y  sql_analyzer.cpp  sql_context.cpp  sql_mlir_translator.cpp  translation_context.cpp
src/compiler/frontend/analyzer/: CMakeLists.txt  main.cpp  sql_analyzer.cpp  sql_context.cpp  sql_pass.cpp  sql_scope.cpp
src/compiler/frontend/analyzer/analyzer/: expression_analyzer.cpp  select_node_analyzer.cpp
src/compiler/frontend/analyzer/bound/: bound_aggregation.cpp  bound_expression.cpp  bound_extend_node.cpp  bound_groupby.cpp  bound_resultmodifier.cpp  bound_tableref.cpp
src/compiler/frontend/analyzer/sql_pass/: resolve_name_pass.cpp
src/compiler/frontend/ast/: parsed_expression.cpp  pipe_operator.cpp  query_node.cpp  result_modifier.cpp  tableref.cpp
src/compiler/frontend/pl/: pl_driver.cpp  pl_lexer.l  pl_parser.y
src/compiler/frontend/sql-parser/: CMakeLists.txt  aggregation_node.cpp  ast_node.cpp  base_expression.cpp  driver.cpp  extend_node.cpp  group_by_node.cpp  lexer.l  main.cpp  node_factory.cpp  parsed_expression.cpp  parser.y  pipe_operator.cpp  query_node.cpp  result_modifier.cpp  tabel_producer.cpp  table_producer.cpp  tableref.cpp
src/compiler/frontend/sql-parser/common/: constant_value.cpp  node_id_generator.cpp
src/compiler/frontend/sql-parser/parsed_expression/: columnref_expression.cpp  comparison_expression.cpp  conjunction_expression.cpp  constant_expression.cpp  function_expression.cpp  star_expression.cpp  targets_expression.cpp
src/compiler/frontend/sql-parser/query_node/: pipe_select_node.cpp  select_node.cpp
src/compiler/frontend/sql-parser/tableref/: basetableref.cpp  joinref.cpp  subqueryref.cpp
src/compiler/frontend/translator/: CMakeLists.txt  main.cpp  sql_mlir_translator.cpp
src/compiler/frontend/translator/context/: translation_context.cpp
src/compiler/mlir-support/: CMakeLists.txt
src/compiler/old-frontend/SQL/: Parser.cpp
src/compiler/plpgsql-frontend/: CMakeLists.txt  lexer.l  parser.y  pl_driver.cpp  test.cpp
src/execution/: Execution.cpp  Frontend.cpp
src/execution/baseline/: CompilerBase.hpp
src/runtime/: CMakeLists.txt  DataSourceIteration.cpp  ExecutionContext.cpp  LazyJoinHashtable.cpp  PythonRuntime.cpp  PythonUDFRuntime.cpp  RelationHelper.cpp  SIP.cpp  Session.cpp  UDFRuntime.cpp  WASM.cpp
src/runtime/storage/: Restrictions.cpp
src/scheduler/: CMakeLists.txt  Scheduler.cpp
src/tools/: CMakeLists.txt  cpython-wasm-test.cpp  run-sql-new.cpp  run-sql.cpp  sql-to-mlir-new.cpp  sql-to-mlir.cpp  sql.cpp  sqlite-tester.cpp  test.cpp
src/tools/server/: CMakeLists.txt  flight_sql_server.cpp  flight_sql_server.h
src/utility/: CMakeLists.txt  PythonUtility.cpp
src/utility/server/: CMakeLists.txt  Statement.cpp  StatementExecution.cpp  StatementHandler.cpp
src/utility/server/ipc/: CMakeLists.txt  IPCHelper.cpp
src/utility/server/parser/: CMakeLists.txt  ParaParser.cpp
src/utility/server/shm/: CMakeLists.txt  SyncHelper.cpp
test/lit/SQL/: syntax.sql
test/lit/SubOp/: scan.mlir
test/sqlite/: test.test
test/sqlite-small/: udf.test  uni.test
test/unittests/: CMakeLists.txt
test/unittests/parser/: TestParserPipeSQL.cpp  TestParserSQL.cpp
test/unittests/translator/: TestSQLToMLIRTranslation.cpp
tools/: CMakeLists.txt
tools/ct/: CMakeLists.txt
tools/docker/server/: Dockerfile
tools/generate/: tpch.sh
tools/mlir-tools/: run-sql.cpp
tools/python/bridgelib/: CMakeLists.txt
tools/python/lingodb/: __init__.py
tools/server/: CMakeLists.txt  flight_sql_server.cpp  flight_sql_server.h
(+92 files in other folders)
